--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -136,10 +136,10 @@ swap_size=8G
 pillow1
 
 [formplayer2]
-10.202.10.129 hostname=formplayer2-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.202.10.129 hostname=formplayer2-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 swap_size=8G
 
 [formplayer3]
-10.202.10.13 hostname=formplayer3-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.202.10.13 hostname=formplayer3-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 swap_size=8G
 
 [formplayer:children]
 formplayer2
