Turn off sessions for ICDS

--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -125,6 +125,7 @@ localsettings:
   BANK_SWIFT_CODE: 'CTZIUS33'
   BIGCOUCH: True
   BIGCOUCH_QUORUM_COUNT: 2
+  BYPASS_SESSIONS_FOR_MOBILE: True
   CASE_ES_DROP_FORM_FIELDS: True
   CELERY_TIMEZONE: 'Asia/Kolkata'
   COMMCARE_HQ_NAME: 'ICDS-CAS Server'
