setting up pgbouncer on citus worker (#3388)

--- a/src/commcare_cloud/ansible/deploy_citusdb.yml
+++ b/src/commcare_cloud/ansible/deploy_citusdb.yml
@@ -16,7 +16,9 @@
     - {role: citusdb, tags: 'citusdb'}
 
 - name: pgbouncer
-  hosts: citusdb_master
+  hosts: citusdb:pg_standby
+  vars_files:
+    - roles/postgresql_base/defaults/main.yml
   become: true
   roles:
     - {role: pgbouncer, tags: 'pgbouncer'}
