--- a/src/commcare_cloud/ansible/roles/pgbouncer/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/tasks/main.yml
@@ -33,6 +33,7 @@
   notify: Restart pgbouncer
   tags:
     - pgbouncer
+  when: not ansible_check_mode
 
 - name: pgbouncer kernel settings
   become: yes
