refactor standby databases to use new format (with validation)

--- a/tests/postgresql_config/2018-04-04-icds-new-snapshot/postgresql.yml
+++ b/tests/postgresql_config/2018-04-04-icds-new-snapshot/postgresql.yml
@@ -65,4 +65,5 @@ dbs:
       host: pgucrstandby
       create: False
       django_migrate: False
-      hq_acceptable_standby_delay: 30
+      acceptable_replication_delay: 30
+      master: icds-ucr
