--- a/environments/icds-cas/postgresql.yml
+++ b/environments/icds-cas/postgresql.yml
@@ -146,16 +146,19 @@ dbs:
       host: pgmainstandby0
       create: False
       django_migrate: False
-      hq_acceptable_standby_delay: 0
+      acceptable_replication_delay: 0
+      master: default
     - django_alias: pgmainstandby1
       name: commcarehq
       host: pgmainstandby1
       create: False
       django_migrate: False
-      hq_acceptable_standby_delay: 0
+      acceptable_replication_delay: 0
+      master: default
     - django_alias: pgmainstandby2
       name: commcarehq
       host: pgmainstandby2
       create: False
       django_migrate: False
-      hq_acceptable_standby_delay: 0
+      acceptable_replication_delay: 0
+      master: default
