--- a/environments/icds-new/postgresql.yml
+++ b/environments/icds-new/postgresql.yml
@@ -88,10 +88,5 @@ dbs:
       host: pgucrstandby
       create: False
       django_migrate: False
-      hq_acceptable_standby_delay: 1800
-#    - django_alias: icds-ucr-standby2
-#      name: commcarehq_icds_aggregatedata
-#      host: pgucrstandby1
-#      create: False
-#      django_migrate: False
-#      hq_acceptable_standby_delay: 1800
+      acceptable_replication_delay: 1800
+      master: icds-ucr
