--- a/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
@@ -1,7 +1,6 @@
 postgresql_dbs:
   all:
   - &id013
-    conn_max_age: 120
     create: true
     django_alias: default
     django_migrate: true
@@ -15,7 +14,6 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id009
-    conn_max_age: 120
     create: true
     django_alias: icds-ucr
     django_migrate: true
@@ -28,8 +26,7 @@ postgresql_dbs:
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - conn_max_age: 120
-    create: false
+  - create: false
     django_alias: icds-ucr-standby1
     django_migrate: false
     host: 10.247.164.24
@@ -43,7 +40,6 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id018
-    conn_max_age: 120
     create: true
     django_alias: p1
     django_migrate: true
@@ -60,7 +56,6 @@ postgresql_dbs:
     - 103
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id016
-    conn_max_age: 120
     create: true
     django_alias: p10
     django_migrate: true
@@ -77,7 +72,6 @@ postgresql_dbs:
     - 1023
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id019
-    conn_max_age: 120
     create: true
     django_alias: p2
     django_migrate: true
@@ -94,7 +88,6 @@ postgresql_dbs:
     - 205
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id004
-    conn_max_age: 120
     create: true
     django_alias: p3
     django_migrate: true
@@ -111,7 +104,6 @@ postgresql_dbs:
     - 308
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id005
-    conn_max_age: 120
     create: true
     django_alias: p4
     django_migrate: true
@@ -128,7 +120,6 @@ postgresql_dbs:
     - 411
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id006
-    conn_max_age: 120
     create: true
     django_alias: p5
     django_migrate: true
@@ -145,7 +136,6 @@ postgresql_dbs:
     - 514
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id001
-    conn_max_age: 120
     create: true
     django_alias: p6
     django_migrate: true
@@ -162,7 +152,6 @@ postgresql_dbs:
     - 617
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id002
-    conn_max_age: 120
     create: true
     django_alias: p7
     django_migrate: true
@@ -179,7 +168,6 @@ postgresql_dbs:
     - 720
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id003
-    conn_max_age: 120
     create: true
     django_alias: p8
     django_migrate: true
@@ -196,7 +184,6 @@ postgresql_dbs:
     - 823
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id017
-    conn_max_age: 120
     create: true
     django_alias: p9
     django_migrate: true
@@ -213,7 +200,6 @@ postgresql_dbs:
     - 926
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id015
-    conn_max_age: 120
     create: true
     django_alias: proxy
     django_migrate: true
@@ -227,7 +213,6 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id023
-    conn_max_age: 120
     create: true
     django_alias: synclogs
     django_migrate: true
@@ -241,7 +226,6 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id010
-    conn_max_age: 120
     create: true
     django_alias: ucr
     django_migrate: false
@@ -255,7 +239,6 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - &id011
-    conn_max_age: 120
     create: true
     django_alias: null
     django_migrate: true
@@ -303,8 +286,7 @@ postgresql_dbs:
     - *id023
     10.247.164.99: *id012
   custom:
-  - conn_max_age: 120
-    create: true
+  - create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
@@ -319,7 +301,6 @@ postgresql_dbs:
   form_processing:
     partitions:
       p1:
-        conn_max_age: 120
         create: true
         django_alias: p1
         django_migrate: true
@@ -336,7 +317,6 @@ postgresql_dbs:
         - 103
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p10:
-        conn_max_age: 120
         create: true
         django_alias: p10
         django_migrate: true
@@ -353,7 +333,6 @@ postgresql_dbs:
         - 1023
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
-        conn_max_age: 120
         create: true
         django_alias: p2
         django_migrate: true
@@ -370,7 +349,6 @@ postgresql_dbs:
         - 205
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
-        conn_max_age: 120
         create: true
         django_alias: p3
         django_migrate: true
@@ -387,7 +365,6 @@ postgresql_dbs:
         - 308
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
-        conn_max_age: 120
         create: true
         django_alias: p4
         django_migrate: true
@@ -404,7 +381,6 @@ postgresql_dbs:
         - 411
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
-        conn_max_age: 120
         create: true
         django_alias: p5
         django_migrate: true
@@ -421,7 +397,6 @@ postgresql_dbs:
         - 514
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p6:
-        conn_max_age: 120
         create: true
         django_alias: p6
         django_migrate: true
@@ -438,7 +413,6 @@ postgresql_dbs:
         - 617
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p7:
-        conn_max_age: 120
         create: true
         django_alias: p7
         django_migrate: true
@@ -455,7 +429,6 @@ postgresql_dbs:
         - 720
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p8:
-        conn_max_age: 120
         create: true
         django_alias: p8
         django_migrate: true
@@ -472,7 +445,6 @@ postgresql_dbs:
         - 823
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p9:
-        conn_max_age: 120
         create: true
         django_alias: p9
         django_migrate: true
@@ -489,7 +461,6 @@ postgresql_dbs:
         - 926
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
-      conn_max_age: 120
       create: true
       django_alias: proxy
       django_migrate: true
@@ -503,7 +474,6 @@ postgresql_dbs:
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   formplayer:
-    conn_max_age: 120
     create: true
     django_alias: null
     django_migrate: true
@@ -517,7 +487,6 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   main:
-    conn_max_age: 120
     create: true
     django_alias: default
     django_migrate: true
@@ -531,8 +500,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   standby:
-  - conn_max_age: 120
-    create: false
+  - create: false
     django_alias: icds-ucr-standby1
     django_migrate: false
     host: 10.247.164.24
@@ -546,7 +514,6 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   synclogs:
-    conn_max_age: 120
     create: true
     django_alias: synclogs
     django_migrate: true
@@ -560,7 +527,6 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   ucr:
-    conn_max_age: 120
     create: true
     django_alias: ucr
     django_migrate: false
