adding citus standby on india

--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -44,6 +44,10 @@
 10.203.20.59 hostname=proxy1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 public_ip=13.234.163.136
 [rds_pgmain0]
 pgmain0-india.ccqpd1xrju8m.ap-south-1.rds.amazonaws.com
+[citus2standby]
+10.203.10.105 hostname=citus2standby-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[citus1standby]
+10.203.10.220 hostname=citus1standby-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
 [citusdb_worker:children]
 citus1
@@ -56,6 +60,27 @@ citus0
 citus0
 citus1
 citus2
+citus1standby
+citus2standby
+
+[citusdb:vars]
+pg_standby=citus1standby,citus2standby
+
+[citus1:vars]
+postgresql_replication_slots=['standby0']
+hot_standby_server=citus1standby
+
+[citus2:vars]
+postgresql_replication_slots=['standby0']
+hot_standby_server=citus2standby
+
+[citus1standby:vars]
+replication_slot=standby0
+hot_standby_master=citus1
+
+[citus2standby:vars]
+replication_slot=standby0
+hot_standby_master=citus2
 
 [proxy:children]
 proxy1
