--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -67,6 +67,20 @@ servers:
     volume_size: 150
     group: citusdb_worker
     os: bionic
+  - server_name: "citus1standby-india"
+    server_instance_type: "c5.xlarge"
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 150
+    group: citusdb_worker
+    os: bionic
+  - server_name: "citus2standby-india"
+    server_instance_type: "c5.xlarge"
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 150
+    group: citusdb_worker
+    os: bionic
 
   - server_name: "airflow1-india"
     server_instance_type: "c5.large"
