--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -63,8 +63,9 @@ citus2
 citus1standby
 citus2standby
 
-[citusdb:vars]
-pg_standby=citus1standby,citus2standby
+[pg_standby:children]
+citus1standby
+citus2standby
 
 [citus1:vars]
 postgresql_replication_slots=['standby0']
