declare ICDS toggles as setting

--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -207,3 +207,125 @@ localsettings:
   USER_REPORTING_METADATA_UPDATE_FREQUENCY_HOURS: 6
   USER_REPORTING_METADATA_BATCH_ENABLED: True
   USER_REPORTING_METADATA_BATCH_SCHEDULE: {'crontab': {'minute': '*/2', 'hour': '17-21'}}
+  ICDS_CAS_ALWAYS_ENABLED_TOGGLES:
+    - 'advanced-app-builder'
+    - 'case_list_custom_xml'
+    - 'case_list_custom_variables'
+    - 'case_list_tile'
+    - 'case_list_lookup'
+    - 'data_file_download'
+    - 'detail-list-tab-nodesets'
+    - 'graph-creation'
+    - 'app_builder_visit_scheduler'
+    - 'user_reports'
+    - 'locations_in_ucr'
+    - 'report_builder'
+    - 'role_webapps_permissions'
+    - 'form_link_workflow'
+    - 'save_to_case'
+    - 'allow_data_reference_in_setvalue'
+    - 'custom_properties'
+    - 'enable_loadtest_users'
+    - 'commtrack'
+    - 'dashboard_icds_reports'
+    - 'legacy_child_modules'
+    - 'fixture_case'
+    - 'call_center_location_owners'
+    - 'custom_app_base_url'
+    - 'hide_messaging_dashboard'
+    - 'mobile_user_demo_mode'
+    - 'locale_id_integrity'
+    - 'emwf_worker_activity_report'
+    - 'data_dictionary'
+    - 'paginated_exports'
+    - 'phone_apk_heartbeat'
+    - 'mobile_recovery_measures'
+    - 'enable_all_add_ons'
+    - 'filtered_bulk_user_download'
+    - 'linked_domains'
+    - 'multi_master_linked_domains'
+    - 'target_commcare_flavor'
+    - 'allow_blank_case_tags'
+    - 'restrict_app_release'
+    - 'release_builds_per_profile'
+    - 'parallel_mpr_asr_report'
+    - 'enable_ucr_mirrors'
+    - 'location_columns_app_status_report'
+    - 'skip_creating_default_build_files_on_build'
+  ICDS_CAS_ALWAYS_DISABLED_TOGGLES:
+    - 'custom-parent-ref'
+    - 'shadow-app-builder'
+    - 'show_persist_case_context_setting'
+    - 'biometric_integration'
+    - 'add_users_from_location'
+    - 'case_detail_print'
+    - 'copy_form_to_app'
+    - 'dhis2_integration'
+    - 'new_multimedia_uploader'
+    - 'report_builder_beta_group'
+    - 'search_claim'
+    - 'case_list_explorer'
+    - 'explore_case_data'
+    - 'ecd_migrated_domains'
+    - 'ecd_enterprise_domains'
+    - 'no_vellum'
+    - 'stock_and_sms_handler'
+    - 'products_per_location'
+    - 'allow_case_attachments_view'
+    - 'transfer_domain'
+    - 'printing'
+    - 'cache_and_index'
+    - 'API_BLACKLIST'
+    - 'non_commtrack_ledgers'
+    - 'custom_instances'
+    - 'custom_assertions'
+    - 'openclinica'
+    - 'icds_dashboard_temporary_downtime'
+    - 'openmrs_integration'
+    - 'APP_BUILDER_CONDITIONAL_NAMES'
+    - 'formplayer_use_livequery'
+    - 'sms_log_changes'
+    - 'enable_include_sms_gateway_charging'
+    - 'mobile_worker_self_registration'
+    - 'legacy_sync_support'
+    - 'not_tf_sql_backend'
+    - 'phone_numbers_report'
+    - 'inbound_sms_leniency'
+    - 'unlimited_report_builder_reports'
+    - 'emg_and_rec_sms_handlers'
+    - 'allow_user_defined_export_columns'
+    - 'disable_column_limit_in_ucr'
+    - 'use_latest_build_cloudcare'
+    - 'bulk_update_multimedia_paths'
+    - 'user_testing_simplify'
+    - 'data_migration'
+    - 'sort_calculation_in_case_list'
+    - 'app-changes-with-improved-diff'
+    - 'couch_sql_migration_blacklist'
+    - 'publish_custom_reports'
+    - 'display_condition_on_nodeset'
+    - 'skip_remove_indices'
+    - 'prevent_mobile_ucr_sync'
+    - 'bulk_upload_date_opened'
+    - 'regex_field_validation'
+    - 'custom_icon_badges'
+    - 'training-module'
+    - 'export_multisort'
+    - 'export_ownership'
+    - 'aggregate_ucrs'
+    - 'show_raw_data_sources_in_report_builder'
+    - 'related_locations'
+    - 'filter_on_groups_and_locations'
+    - 'dont_index_same_casetype'
+    - 'location_safe_case_imports'
+    - 'hide_hq_on_mobile_experience'
+    - 'dashboard_reach_reports'
+    - 'partial_ui_translations'
+    - 'skip_orm_fixture_upload'
+    - 'disable_case_update_rule_task'
+    - 'group_api_use_couch_backend'
+    - 'user_api_use_es_backend'
+    - 'phi_cas_integration'
+    - 'rate_limit_submissions'
+    - 'rate_limit_restores'
+    - 'skip_updating_user_reporting_metadata'
