--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -363,231 +363,285 @@ localsettings:
     skip_creating_default_build_files_on_build:
       always_enabled:
         - 'icds-cas'
-  custom-parent-ref:
-    always_disabled:
-      - 'icds-cas'
-  shadow-app-builder:
-    always_disabled:
-      - 'icds-cas'
-  show_persist_case_context_setting:
-    always_disabled:
-      - 'icds-cas'
-  biometric_integration:
-    always_disabled:
-      - 'icds-cas'
-  add_users_from_location:
-    always_disabled:
-      - 'icds-cas'
-  case_detail_print:
-    always_disabled:
-      - 'icds-cas'
-  copy_form_to_app:
-    always_disabled:
-      - 'icds-cas'
-  dhis2_integration:
-    always_disabled:
-      - 'icds-cas'
-  new_multimedia_uploader:
-    always_disabled:
-      - 'icds-cas'
-  report_builder_beta_group:
-    always_disabled:
-      - 'icds-cas'
-  search_claim:
-    always_disabled:
-      - 'icds-cas'
-  case_list_explorer:
-    always_disabled:
-      - 'icds-cas'
-  explore_case_data:
-    always_disabled:
-      - 'icds-cas'
-  ecd_migrated_domains:
-    always_disabled:
-      - 'icds-cas'
-  ecd_enterprise_domains:
-    always_disabled:
-      - 'icds-cas'
-  no_vellum:
-    always_disabled:
-      - 'icds-cas'
-  stock_and_sms_handler:
-    always_disabled:
-      - 'icds-cas'
-  products_per_location:
-    always_disabled:
-      - 'icds-cas'
-  allow_case_attachments_view:
-    always_disabled:
-      - 'icds-cas'
-  transfer_domain:
-    always_disabled:
-      - 'icds-cas'
-  printing:
-    always_disabled:
-      - 'icds-cas'
-  cache_and_index:
-    always_disabled:
-      - 'icds-cas'
-  API_BLACKLIST:
-    always_disabled:
-      - 'icds-cas'
-  non_commtrack_ledgers:
-    always_disabled:
-      - 'icds-cas'
-  custom_instances:
-    always_disabled:
-      - 'icds-cas'
-  custom_assertions:
-    always_disabled:
-      - 'icds-cas'
-  openclinica:
-    always_disabled:
-      - 'icds-cas'
-  icds_dashboard_temporary_downtime:
-    always_disabled:
-      - 'icds-cas'
-  openmrs_integration:
-    always_disabled:
-      - 'icds-cas'
-  APP_BUILDER_CONDITIONAL_NAMES:
-    always_disabled:
-      - 'icds-cas'
-  formplayer_use_livequery:
-    always_disabled:
-      - 'icds-cas'
-  sms_log_changes:
-    always_disabled:
-      - 'icds-cas'
-  enable_include_sms_gateway_charging:
-    always_disabled:
-      - 'icds-cas'
-  mobile_worker_self_registration:
-    always_disabled:
-      - 'icds-cas'
-  legacy_sync_support:
-    always_disabled:
-      - 'icds-cas'
-  not_tf_sql_backend:
-    always_disabled:
-      - 'icds-cas'
-  phone_numbers_report:
-    always_disabled:
-      - 'icds-cas'
-  inbound_sms_leniency:
-    always_disabled:
-      - 'icds-cas'
-  unlimited_report_builder_reports:
-    always_disabled:
-      - 'icds-cas'
-  emg_and_rec_sms_handlers:
-    always_disabled:
-      - 'icds-cas'
-  allow_user_defined_export_columns:
-    always_disabled:
-      - 'icds-cas'
-  disable_column_limit_in_ucr:
-    always_disabled:
-      - 'icds-cas'
-  use_latest_build_cloudcare:
-    always_disabled:
-      - 'icds-cas'
-  bulk_update_multimedia_paths:
-    always_disabled:
-      - 'icds-cas'
-  user_testing_simplify:
-    always_disabled:
-      - 'icds-cas'
-  data_migration:
-    always_disabled:
-      - 'icds-cas'
-  sort_calculation_in_case_list:
-    always_disabled:
-      - 'icds-cas'
-  app-changes-with-improved-diff:
-    always_disabled:
-      - 'icds-cas'
-  couch_sql_migration_blacklist:
-    always_disabled:
-      - 'icds-cas'
-  publish_custom_reports:
-    always_disabled:
-      - 'icds-cas'
-  display_condition_on_nodeset:
-    always_disabled:
-      - 'icds-cas'
-  skip_remove_indices:
-    always_disabled:
-      - 'icds-cas'
-  prevent_mobile_ucr_sync:
-    always_disabled:
-      - 'icds-cas'
-  bulk_upload_date_opened:
-    always_disabled:
-      - 'icds-cas'
-  regex_field_validation:
-    always_disabled:
-      - 'icds-cas'
-  custom_icon_badges:
-    always_disabled:
-      - 'icds-cas'
-  training-module:
-    always_disabled:
-      - 'icds-cas'
-  export_multisort:
-    always_disabled:
-      - 'icds-cas'
-  export_ownership:
-    always_disabled:
-      - 'icds-cas'
-  aggregate_ucrs:
-    always_disabled:
-      - 'icds-cas'
-  show_raw_data_sources_in_report_builder:
-    always_disabled:
-      - 'icds-cas'
-  related_locations:
-    always_disabled:
-      - 'icds-cas'
-  filter_on_groups_and_locations:
-    always_disabled:
-      - 'icds-cas'
-  dont_index_same_casetype:
-    always_disabled:
-      - 'icds-cas'
-  location_safe_case_imports:
-    always_disabled:
-      - 'icds-cas'
-  hide_hq_on_mobile_experience:
-    always_disabled:
-      - 'icds-cas'
-  dashboard_reach_reports:
-    always_disabled:
-      - 'icds-cas'
-  partial_ui_translations:
-    always_disabled:
-      - 'icds-cas'
-  skip_orm_fixture_upload:
-    always_disabled:
-      - 'icds-cas'
-  disable_case_update_rule_task:
-    always_disabled:
-      - 'icds-cas'
-  group_api_use_couch_backend:
-    always_disabled:
-      - 'icds-cas'
-  user_api_use_es_backend:
-    always_disabled:
-      - 'icds-cas'
-  phi_cas_integration:
-    always_disabled:
-      - 'icds-cas'
-  rate_limit_submissions:
-    always_disabled:
-      - 'icds-cas'
-  rate_limit_restores:
-    always_disabled:
-      - 'icds-cas'
-  skip_updating_user_reporting_metadata:
-    always_disabled:
-      - 'icds-cas'
+    ucr_sum_when_templates:
+      always_enabled:
+        - 'icds-cas'
+    hierarchical_location_fixture:
+      always_enabled:
+        - 'icds-cas'
+    extension_sync:
+      always_enabled:
+        - 'icds-cas'
+    livequery_sync:
+      always_enabled:
+        - 'icds-cas'
+    mobile_ucr:
+      always_enabled:
+        - 'icds-cas'
+    mobile_ucr_linked_domain:
+      always_enabled:
+        - 'icds-cas'
+    cautious_multimedia:
+      always_enabled:
+        - 'icds-cas'
+        - 'icds'
+    icds:
+      always_enabled:
+        - 'icds-cas'
+        - 'icds-dashboard-qa'
+        - 'reach-test'
+        - 'icds-sql'
+        - 'icds-test'
+        - 'icds-cas-sandbox'
+    custom-parent-ref:
+      always_disabled:
+        - 'icds-cas'
+    shadow-app-builder:
+      always_disabled:
+        - 'icds-cas'
+    show_persist_case_context_setting:
+      always_disabled:
+        - 'icds-cas'
+    biometric_integration:
+      always_disabled:
+        - 'icds-cas'
+    add_users_from_location:
+      always_disabled:
+        - 'icds-cas'
+    case_detail_print:
+      always_disabled:
+        - 'icds-cas'
+    copy_form_to_app:
+      always_disabled:
+        - 'icds-cas'
+    dhis2_integration:
+      always_disabled:
+        - 'icds-cas'
+    new_multimedia_uploader:
+      always_disabled:
+        - 'icds-cas'
+    report_builder_beta_group:
+      always_disabled:
+        - 'icds-cas'
+    search_claim:
+      always_disabled:
+        - 'icds-cas'
+    case_list_explorer:
+      always_disabled:
+        - 'icds-cas'
+    explore_case_data:
+      always_disabled:
+        - 'icds-cas'
+    ecd_migrated_domains:
+      always_disabled:
+        - 'icds-cas'
+    ecd_enterprise_domains:
+      always_disabled:
+        - 'icds-cas'
+    no_vellum:
+      always_disabled:
+        - 'icds-cas'
+    stock_and_sms_handler:
+      always_disabled:
+        - 'icds-cas'
+    products_per_location:
+      always_disabled:
+        - 'icds-cas'
+    allow_case_attachments_view:
+      always_disabled:
+        - 'icds-cas'
+    transfer_domain:
+      always_disabled:
+        - 'icds-cas'
+    printing:
+      always_disabled:
+        - 'icds-cas'
+    cache_and_index:
+      always_disabled:
+        - 'icds-cas'
+    API_BLACKLIST:
+      always_disabled:
+        - 'icds-cas'
+    non_commtrack_ledgers:
+      always_disabled:
+        - 'icds-cas'
+    custom_instances:
+      always_disabled:
+        - 'icds-cas'
+    custom_assertions:
+      always_disabled:
+        - 'icds-cas'
+    openclinica:
+      always_disabled:
+        - 'icds-cas'
+    icds_dashboard_temporary_downtime:
+      always_disabled:
+        - 'icds-cas'
+    openmrs_integration:
+      always_disabled:
+        - 'icds-cas'
+    APP_BUILDER_CONDITIONAL_NAMES:
+      always_disabled:
+        - 'icds-cas'
+    formplayer_use_livequery:
+      always_disabled:
+        - 'icds-cas'
+    sms_log_changes:
+      always_disabled:
+        - 'icds-cas'
+    enable_include_sms_gateway_charging:
+      always_disabled:
+        - 'icds-cas'
+    mobile_worker_self_registration:
+      always_disabled:
+        - 'icds-cas'
+    legacy_sync_support:
+      always_disabled:
+        - 'icds-cas'
+    not_tf_sql_backend:
+      always_disabled:
+        - 'icds-cas'
+    phone_numbers_report:
+      always_disabled:
+        - 'icds-cas'
+    inbound_sms_leniency:
+      always_disabled:
+        - 'icds-cas'
+    unlimited_report_builder_reports:
+      always_disabled:
+        - 'icds-cas'
+    emg_and_rec_sms_handlers:
+      always_disabled:
+        - 'icds-cas'
+    allow_user_defined_export_columns:
+      always_disabled:
+        - 'icds-cas'
+    disable_column_limit_in_ucr:
+      always_disabled:
+        - 'icds-cas'
+    use_latest_build_cloudcare:
+      always_disabled:
+        - 'icds-cas'
+    bulk_update_multimedia_paths:
+      always_disabled:
+        - 'icds-cas'
+    user_testing_simplify:
+      always_disabled:
+        - 'icds-cas'
+    data_migration:
+      always_disabled:
+        - 'icds-cas'
+    sort_calculation_in_case_list:
+      always_disabled:
+        - 'icds-cas'
+    app-changes-with-improved-diff:
+      always_disabled:
+        - 'icds-cas'
+    couch_sql_migration_blacklist:
+      always_disabled:
+        - 'icds-cas'
+    publish_custom_reports:
+      always_disabled:
+        - 'icds-cas'
+    display_condition_on_nodeset:
+      always_disabled:
+        - 'icds-cas'
+    skip_remove_indices:
+      always_disabled:
+        - 'icds-cas'
+    prevent_mobile_ucr_sync:
+      always_disabled:
+        - 'icds-cas'
+    bulk_upload_date_opened:
+      always_disabled:
+        - 'icds-cas'
+    regex_field_validation:
+      always_disabled:
+        - 'icds-cas'
+    custom_icon_badges:
+      always_disabled:
+        - 'icds-cas'
+    training-module:
+      always_disabled:
+        - 'icds-cas'
+    export_multisort:
+      always_disabled:
+        - 'icds-cas'
+    export_ownership:
+      always_disabled:
+        - 'icds-cas'
+    aggregate_ucrs:
+      always_disabled:
+        - 'icds-cas'
+    show_raw_data_sources_in_report_builder:
+      always_disabled:
+        - 'icds-cas'
+    related_locations:
+      always_disabled:
+        - 'icds-cas'
+    filter_on_groups_and_locations:
+      always_disabled:
+        - 'icds-cas'
+    dont_index_same_casetype:
+      always_disabled:
+        - 'icds-cas'
+    location_safe_case_imports:
+      always_disabled:
+        - 'icds-cas'
+    hide_hq_on_mobile_experience:
+      always_disabled:
+        - 'icds-cas'
+    dashboard_reach_reports:
+      always_disabled:
+        - 'icds-cas'
+    partial_ui_translations:
+      always_disabled:
+        - 'icds-cas'
+    skip_orm_fixture_upload:
+      always_disabled:
+        - 'icds-cas'
+    disable_case_update_rule_task:
+      always_disabled:
+        - 'icds-cas'
+    group_api_use_couch_backend:
+      always_disabled:
+        - 'icds-cas'
+    user_api_use_es_backend:
+      always_disabled:
+        - 'icds-cas'
+    phi_cas_integration:
+      always_disabled:
+        - 'icds-cas'
+    rate_limit_submissions:
+      always_disabled:
+        - 'icds-cas'
+    rate_limit_restores:
+      always_disabled:
+        - 'icds-cas'
+    skip_updating_user_reporting_metadata:
+      always_disabled:
+        - 'icds-cas'
+    mm_case_properties:
+      always_disabled:
+        - 'icds-cas'
+    async_restore:
+      always_disabled:
+        - 'icds-cas'
+    sync_all_locations:
+      always_disabled:
+        - 'icds-cas'
+    FORM_SUBMISSION_BLACKLIST:
+      always_disabled:
+        - 'icds-cas'
+    run_auto_case_updates_on_save:
+      always_disabled:
+        - 'icds-cas'
+    mobile_user_login_lockout:
+      always_disabled:
+        - 'icds-cas'
+    sort_out_of_order_form_submissions_sql:
+      always_disabled:
+        - 'icds-cas'
+    manage_releases_per_location:
+      always_disabled:
+        - 'icds-cas'
