--- a/environments/production/public.yml
+++ b/environments/production/public.yml
@@ -140,6 +140,15 @@ localsettings:
   STATIC_ROOT:
   STATIC_CDN: 'https://dnwn0mt1jqwp0.cloudfront.net'
   WS4REDIS_CONNECTION_HOST: "{{ groups.redis.0 }}"
+  STATIC_TOGGLE_STATES:
+    mobile_ucr_linked_domain:
+      always_enabled:
+        - 'fmoh-echis-staging'
+    couch_sql_migration_blacklist:
+      always_enabled:
+        - 'ews-ghana'
+        - 'ils-gateway'
+        - 'ils-gateway-train'
 
 # comment these two lines out to make a new rackspace machine
 commcare_cloud_root_user: ubuntu
