add standbys to citusdb worker group

--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -52,6 +52,8 @@ pgmain0-india.ccqpd1xrju8m.ap-south-1.rds.amazonaws.com
 [citusdb_worker:children]
 citus1
 citus2
+citus1standby
+citus2standby
 
 [citusdb_master:children]
 citus0
