--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -393,6 +393,9 @@ localsettings:
         - 'icds-sql'
         - 'icds-test'
         - 'icds-cas-sandbox'
+    show_build_profile_in_app_status:
+      always_enabled:
+        - 'icds-cas'
     custom-parent-ref:
       always_disabled:
         - 'icds-cas'
