--- a/environments/icds-aws/inventory.ini
+++ b/environments/icds-aws/inventory.ini
@@ -1,5 +1,8 @@
+[pgwarehouse0]
+10.203.40.95 hostname=pgwarehouse0 ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 datavol_device=/dev/nvme1n1 datavol_device1=/dev/nvme1n1 is_datavol_ebsnvme=yes swap_size=8G
+
 [localhost]
-100.71.128.7 hostname=localhost swap_size=8G ufw_private_interface=ens160
+10.203.20.205 hostname=localhost swap_size=8G ufw_private_interface=ens160
 
 [proxy:children]
 
@@ -10,6 +13,7 @@
 [couchdb2:children]
 
 [postgresql:children]
+pgwarehouse0
 
 [zookeeper:children]
 
