--- a/environments/icds-aws/terraform.yml
+++ b/environments/icds-aws/terraform.yml
@@ -18,7 +18,7 @@ vpn_connections: []
 external_routes: []
 
 servers:
-  - server_name: "pgwarehouse"
+  - server_name: "pgwarehouse0"
     server_instance_type: "t3a.2xlarge"
     network_tier: "db-private"
     az: "a"
