--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/management_commands.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/management_commands.yml
@@ -3,6 +3,9 @@
   template:
     src: "../templates/supervisor_management_commands.conf.j2"
     dest: "{{ service_home }}/{{ deploy_env }}_supervisor_management_commands.conf"
+    owner: "{{ cchq_user }}"
+    group: "{{ cchq_user }}"
+    mode: 0644
   when: app_processes_config.management_commands.get(inventory_hostname, {})
   tags:
     - services
