--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/celery.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/celery.yml
@@ -2,6 +2,7 @@
 # validate_app_processes_config(), in app_processes.py, so they don't share a process with another queue.
 
 - name: Add celery_bash_runner files
+  become: yes
   template:
     src: "../templates/celery_bash_runner.sh.j2"
     dest: "{{ service_home }}/{{ deploy_env }}_{{ item.file_name }}"
@@ -17,7 +18,7 @@
   register: celery_bash_runner_files
 
 - name: define special celery services
-  become: cchq
+  become: yes
   template:
     src: "{{ item.template }}"
     dest: "{{ service_home }}/{{ deploy_env }}_{{ item.file_name }}"
@@ -40,7 +41,7 @@
   register: celery_special_service_files
 
 - name: define celery workers
-  become: cchq
+  become: yes
   template:
     src: "../templates/supervisor_celery_workers.conf.j2"
     dest: "{{ service_home }}/{{ deploy_env }}_supervisor_celery_workers.conf"
