--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/pillowtop.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/pillowtop.yml
@@ -1,5 +1,5 @@
 - name: define pillowtop services
-  become: cchq
+  become: yes
   template:
     src: "../templates/supervisor_pillowtop.conf.j2"
     dest: "{{ service_home }}/{{ deploy_env }}_supervisor_pillowtop.conf"
