--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/proxy_websockets.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/proxy_websockets.yml
@@ -1,5 +1,5 @@
 - name: define websockets services
-  become: cchq
+  become: yes
   template:
     src: "../templates/supervisor_websockets.conf"
     dest: "{{ service_home }}/{{ deploy_env }}_supervisor_websockets.conf"
