--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -299,34 +299,59 @@ pillows:
       total_processes: 32
       processor_chunk_size: 100
   'pillow27':
-    case-pillow:
+    case-pillow-non-dashboard:
       start_process: 0
-      num_processes: 48
-      total_processes: 240
+      num_processes: 12
+      total_processes: 60
+      processor_chunk_size: 100
+    case-pillow-dashboard:
+      start_process: 0
+      num_processes: 12
+      total_processes: 60
       processor_chunk_size: 100
   'pillow28':
-    case-pillow:
-      start_process: 48
-      num_processes: 48
-      total_processes: 240
+    case-pillow-non-dashboard:
+      start_process: 12
+      num_processes: 12
+      total_processes: 60
+      processor_chunk_size: 100
+    case-pillow-dashboard:
+      start_process: 12
+      num_processes: 12
+      total_processes: 60
       processor_chunk_size: 100
   'pillow29':
-    case-pillow:
-      start_process: 96
-      num_processes: 48
-      total_processes: 240
+    case-pillow-non-dashboard:
+      start_process: 24
+      num_processes: 12
+      total_processes: 60
+      processor_chunk_size: 100
+    case-pillow-dashboard:
+      start_process: 24
+      num_processes: 12
+      total_processes: 60
       processor_chunk_size: 100
   'pillow30':
-    case-pillow:
-      start_process: 144
-      num_processes: 48
-      total_processes: 240
+    case-pillow-non-dashboard:
+      start_process: 36
+      num_processes: 12
+      total_processes: 60
+      processor_chunk_size: 100
+    case-pillow-dashboard:
+      start_process: 36
+      num_processes: 12
+      total_processes: 60
       processor_chunk_size: 100
   'pillow31':
-    case-pillow:
-      start_process: 192
-      num_processes: 48
-      total_processes: 240
+    case-pillow-non-dashboard:
+      start_process: 48
+      num_processes: 12
+      total_processes: 60
+      processor_chunk_size: 100
+    case-pillow-dashboard:
+      start_process: 48
+      num_processes: 12
+      total_processes: 60
       processor_chunk_size: 100
   'pillow32':
   'pillow33':
