--- a/src/commcare_cloud/ansible/roles/citusdb/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/citusdb/tasks/main.yml
@@ -32,6 +32,7 @@
      postgresql_shared_preload_libraries:
        - 'citus'
        - 'pg_stat_statements'
+     postgresql_custom_settings: "{{ [\"citus.use_secondary_nodes = 'always'\"] if 'pg_standby' in groups else []}}"
 
  - name: Set up Citus Worker DBs
    import_tasks: setup_worker.yml
