--- a/environments/icds-cas/postgresql.yml
+++ b/environments/icds-cas/postgresql.yml
@@ -53,6 +53,10 @@ postgres_override:
     - contype: host
       users: TCLBKPADMIN
       netmask: 100.71.188.129/32
+    - contype: host
+      databases: replication
+      users: TCLBKPADMIN
+      netmask: 100.71.188.129/32
 
 dbs:
   main:
