--- a/environments/icds-cas/postgresql.yml
+++ b/environments/icds-cas/postgresql.yml
@@ -2,7 +2,11 @@ DEFAULT_POSTGRESQL_HOST: pgmain1
 
 REPORTING_DATABASES:
   ucr: ucr
-  icds-ucr-citus: icds-ucr-citus
+  icds-ucr-citus:
+    WRITE: icds-ucr-citus
+    READ:
+      - [icds-ucr-citus, 1]
+      - [icds-ucr-citus-standby, 4]
 
 LOAD_BALANCED_APPS:
   auth:
