--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -19,6 +19,7 @@ nadir_hour: 16
 
 #RabbitMQ Broker URL
 BROKER_URL: 'amqp://{{ AMQP_USER }}:{{ AMQP_PASSWORD }}@{{ AMQP_HOST }}:5672/{{ AMQP_NAME }};amqp://{{ AMQP_USER }}:{{ AMQP_PASSWORD }}@{{ groups.rabbitmq.1 }}:5672/{{ AMQP_NAME }}'
+RABBITMQ_CLUSTER_NAME: 'rabbit0'
 
 # ElasticSearch Backup on Swift API
 backup_es_swift: True
