Add IS_DIMAGI_ENVIRONMENT variable

--- a/environments/echis/public.yml
+++ b/environments/echis/public.yml
@@ -68,6 +68,7 @@ localsettings:
   EMAIL_SMTP_PORT: 587
   EMAIL_USE_TLS: yes
   ENABLE_SOFT_ASSERT_EMAILS: no
+  IS_DIMAGI_ENVIRONMENT: False
   ENFORCE_TWO_FACTOR_FOR_SUPERUSERS: False
   HQ_INSTANCE: 'echis'
   INACTIVITY_TIMEOUT: 20160
