--- a/environments/india/public.yml
+++ b/environments/india/public.yml
@@ -99,6 +99,7 @@ localsettings:
   EMAIL_USE_TLS: yes
   ENABLE_DRACONIAN_SECURITY_FEATURES: yes
   ENABLE_SOFT_ASSERT_EMAILS: True
+  IS_DIMAGI_ENVIRONMENT: True
   EULA_COMPLIANCE: True
   HQ_INSTANCE: 'india'
   INACTIVITY_TIMEOUT: 20160
