--- a/environments/production/public.yml
+++ b/environments/production/public.yml
@@ -113,6 +113,7 @@ localsettings:
   EMAIL_SMTP_PORT: 587
   EMAIL_USE_TLS: yes
   ENABLE_SOFT_ASSERT_EMAILS: True
+  IS_DIMAGI_ENVIRONMENT: True
   HQ_INSTANCE: 'www'
   INACTIVITY_TIMEOUT: 20160
   INVOICE_FROM_ADDRESS:
