--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -163,6 +163,7 @@ localsettings:
   EMAIL_SMTP_PORT: 26
   EMAIL_USE_TLS: yes
   ENABLE_SOFT_ASSERT_EMAILS: True
+  IS_DIMAGI_ENVIRONMENT: True
   HQ_INSTANCE: 'icds'
   INACTIVITY_TIMEOUT: 20160
   ICDS_USE_CITUS: True
