--- a/environments/swiss/public.yml
+++ b/environments/swiss/public.yml
@@ -100,6 +100,7 @@ localsettings:
   EMAIL_SMTP_PORT: 587
   EMAIL_USE_TLS: yes
   ENABLE_SOFT_ASSERT_EMAILS: True
+  IS_DIMAGI_ENVIRONMENT: True
   EULA_COMPLIANCE: True
   HQ_INSTANCE: 'swiss'
   HUBSPOT_API_ID:
