Updated Airflow Docs

--- a/src/commcare_cloud/ansible/deploy_airflow.yml
+++ b/src/commcare_cloud/ansible/deploy_airflow.yml
@@ -2,4 +2,6 @@
 - name: Airflow
   hosts: airflow
   roles:
-    - {role: airflow, tags: airflow}
+    - role: airflow
+      tags: airflow 
+      when: groups.airflow |length == 1
